# rpicross_notes

./: 01-setup.md  02-network.md  03-peripherals.md  04-xc-setup.md  05-xc-userland.md  06-xc-opencv.md  07-xc-ros.md  08-native-opencv.md  09-native-ros.md  1-setup.md  10-combine.md  10-ros-remote.md  11-ros-dev.md  12-wiringpi.md  2-network.md  3-Peripherals.md  3-peripherals.md  4-xc-setup.md  5-xc-userland.md  6-xc-opencv.md  7-xc-ros.md  8-native-opencv.md  8-opencv.md  9-native-ros.md  README.md  rpi-generic-toolchain-opencv-4.3.0.cmake  rpi-generic-toolchain.cmake  sync-rpi-vm.sh
hello/ocv/: CMakeLists.txt  hello.cpp
hello/pi/: CMakeLists.txt  hello.cpp
hello/raspicam/: CMakeLists.txt
hello/ros/: CMakeLists.txt  hello.cpp  package.xml
hello/wiringpi/: CMakeLists.txt  pwm.c  wiringpi.pc
ros/: rossetup-rpi
ros/chatter/: CMakeLists.txt  package.xml
ros/pub_local/: CMakeLists.txt  local_chatter.launch  package.xml  publisher.cpp  subscriber.cpp
scripts/: ros-cross  ros-native  ros_cross  ros_native  rossetup-rpi  sync-ros.sh  sync-rpi-vm.sh  sync-rpi-xcs.sh  sync-vm-rpi.sh  sync-xcs-rpi.sh
